# auth_fastapi_keycloak

./: README.md  pyproject.toml
auth_fastapi_keycloak/: keycloak.py  main.py
